force-app/main/default/objects/Use_Case__c/Use_Case__c.object-meta.xml
<CustomObject>
    <label>Use Case</label>
    <nameField>
        <displayFormat>UC-{000000}</displayFormat>
        <label>Use Case Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Use Cases</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>