force-app/main/default/objects/Use_Case__c/fields/Actor_User_Group__c.field-meta.xml
<CustomField>
    <fullName>Actor_User_Group__c</fullName>
    <description>Name the actor that will be initiating this use case (primary) and any other actors who will participate in completing the use case (secondary).</description>
    <inlineHelpText>Name the actor that will be initiating this use case (primary) and any other actors who will participate in completing the use case (secondary).</inlineHelpText>
    <label>Actor (User Group)</label>
    <type>TextArea</type>
</CustomField>