force-app/main/default/objects/Use_Case__c/fields/Alternative_Flows__c.field-meta.xml
<CustomField>
    <fullName>Alternative_Flows__c</fullName>
    <description>Document branches from the main flow to handle special conditions</description>
    <inlineHelpText>Document branches from the main flow to handle special conditions</inlineHelpText>
    <label>Alternative Flows</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>