force-app/main/default/objects/Use_Case__c/fields/Capability__c.field-meta.xml
<CustomField>
    <fullName>Capability__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Capability</label>
    <referenceTo>Capability__c</referenceTo>
    <relationshipLabel>Use Cases</relationshipLabel>
    <relationshipName>Use_Cases</relationshipName>
    <type>Lookup</type>
</CustomField>