force-app/main/default/objects/Use_Case__c/fields/Frequency_of_Use__c.field-meta.xml
<CustomField>
    <fullName>Frequency_of_Use__c</fullName>
    <description>How often will this Use Case be executed?</description>
    <inlineHelpText>How often will this Use Case be executed?</inlineHelpText>
    <label>Frequency of Use</label>
    <length>255</length>
    <type>Text</type>
</CustomField>