force-app/main/default/objects/Use_Case__c/fields/Normal_Flow__c.field-meta.xml
<CustomField>
    <fullName>Normal_Flow__c</fullName>
    <description>Provide a detailed description of the user actions and system responses that will take place during execution of the use case under normal conditions</description>
    <inlineHelpText>Provide a detailed description of the user actions and system responses that will take place during execution of the use case under normal conditions</inlineHelpText>
    <label>Normal Flow</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>