force-app/main/default/objects/Use_Case__c/fields/Overview__c.field-meta.xml
<CustomField>
    <fullName>Overview__c</fullName>
    <description>Provide a brief description of the reason for and outcome of this use case</description>
    <inlineHelpText>Provide a brief description of the reason for and outcome of this use case</inlineHelpText>
    <label>Overview</label>
    <type>TextArea</type>
</CustomField>