force-app/main/default/objects/Use_Case__c/fields/Post_Conditions__c.field-meta.xml
<CustomField>
    <fullName>Post_Conditions__c</fullName>
    <description>Describe the state of the system at the conclusion of the use case execution</description>
    <inlineHelpText>Describe the state of the system at the conclusion of the use case execution</inlineHelpText>
    <label>Post Conditions</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>