force-app/main/default/objects/Use_Case__c/fields/Preconditions__c.field-meta.xml
<CustomField>
    <fullName>Preconditions__c</fullName>
    <description>List any activities that must take place, or any conditions that must be true, before the use case can be started. Number each pre-condition</description>
    <inlineHelpText>List any activities that must take place, or any conditions that must be true, before the use case can be started. Number each pre-condition</inlineHelpText>
    <label>Preconditions</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>