force-app/main/default/objects/Use_Case__c/fields/Use_Case_Name__c.field-meta.xml
<CustomField>
    <fullName>Use_Case_Name__c</fullName>
    <description>Short Name for the Use Case</description>
    <inlineHelpText>Short Name for the Use Case</inlineHelpText>
    <label>Use Case Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>